[gd_scene load_steps=13 format=2]

[ext_resource path="res://Weapons/LaserBeam/glowing_circle.png" type="Texture" id=1]
[ext_resource path="res://Weapons/LaserBeam/LaserBeam.gd" type="Script" id=2]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00355872, 0.622776 )
colors = PoolColorArray( 0.776471, 0.776471, 0.776471, 1, 1, 0.996078, 0.996078, 0.588235 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.503289, 0.996591 ), 0.0, 0.0, 0, 0, Vector2( 0.993421, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.00328947, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.519737, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.983553, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 60, 20, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = -100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
scale = 0.3
scale_curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_bicubic_upscale = true

[node name="LaserBeam" type="RayCast2D" groups=["weapon"]]
collision_mask = 2
script = ExtResource( 2 )

[node name="FillLine" type="Line2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
points = PoolVector2Array( 0, 0, 320, 0 )
width = 30.0
default_color = Color( 0.4, 0.678431, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CastingParticle" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="BeamParticle" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 50
lifetime = 0.5
visibility_rect = Rect2( -2500, -2500, 5000, 5000 )
local_coords = false
draw_order = 1
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="CollisionParticle" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 16
lifetime = 0.3
process_material = SubResource( 10 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
